fixed issue where upon zooming in too much the scrollbars would lose their correct position

--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@
   overflow-x: auto;
   width: 153px;
   overflow-y: auto;
-  height: 35vh;
+  height: 30vh;
 }
 
 #canvas-wrapper-parent {
